# BasexCpp

./: .gitmodules  README  README.md
sources/libBasexCpp/: CMakeLists.txt
sources/libBasexTest/: CMakeLists.txt  README
sources/libBasexTest/src/: libBasexTest.cpp
